[project]
name = "bastion-bench"
version = "0.1.0"
description = "Bilingual benchmark for safety-utility trade-offs in open-weight LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "rich>=13",
]

[project.scripts]
bastion = "bastion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/bastion"]
